--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,10 @@ uuid = "cfd42080-4670-40bd-8d0e-f97b88df8fc1"
 authors = ["Yelyzaveta Velizhanina <yelyzaveta.velizhanina@ulb.be> and contributors"]
 version = "0.1.0"
 
+[deps]
+Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
+Lazy = "50d2b5c4-7a5e-59d5-8109-a42b560f39c0"
+
 [compat]
 julia = "1"
 
